# Social-Network-FastAPI

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  prestart.sh  pyproject.toml
auth/: auth.py  database.py  manager.py
friendly/: admin.py  config.py  database.py  logger_config.py  main.py
friendly/auth/: auth.py  auth_handler.py  google_oauth.py  hashing_password.py  models.py  yandex_oauth.py
friendly/data_access_object/: base.py
friendly/firebase/: __init__.py  notification.py
friendly/mail/: __init__.py  mail_sender.py
friendly/object_storage_service/: s3.py
friendly/redis_service/: __init__.py
friendly/scripts/: load_values_db.py
friendly/task_queue/: __init__.py  celery_settings.py
migrations/: env.py
migrations/versions/: 01-10-2024_cc5fb0c3aba6_.py  02-10-2024_bc1af87f2e2a_.py  04-10-2024_ba15d84c6e75_.py  05-09-2024_a277b6ce10cb_user_table.py  06-09-2024_132d302d2f78_.py  09-11-2024_51ed7eb2ed1b_user_notific_friend_devices_and_.py  11-11-2024_32304243e24a_user_notific_friend_devices_and_.py  12-10-2024_799827db976e_add_fcmdevicetoken_table.py  12-11-2024_1604516de9f0_user_notific_friend_devices_and_.py  13-04-2025_4907e7f6a1f4_add_reaction_tables.py  14-10-2024_2f2c9e4da70c_notification_table.py  16-03-2025_4f691a15dab3_.py  16-10-2024_27cb28b020dd_add_fcmdevicetoken_table.py  18-11-2024_a908af2235e2_.py  19-08-2024_13bad9f2b3d0_create_user_table.py  19-11-2024_10a0e82146a4_file_filetype.py  20-04-2025_0969b7cdf072_.py  2023_09_28_1708-45d94a62289f_.py  2023_10_05_2149-ec05665ceedb_.py  2023_10_06_1358-1df36541a28c_.py  2023_11_03_1219-2c9e421bc826_.py  22-03-2025_fe1590ff3804_add_table_news.py  22-08-2024_9c2a0ceedc3a_create_user_table.py  31-07-2024_a0cb5fdfe4b3_add_user_table.py  90ef4666e28a_new.py
models/: models.py
scripts/: load_values_db.py
seed_data/: fileType.json  reaction.json
src/: bad_responses.py  config.py  main.py
src/auth/: base_config.py  manager.py  models.py  schemas.py  utils.py
src/posts/: models.py  router.py  schemas.py
src/profile/: router.py
src/tasks/: send_email_to_user.py
tests/: conftest.py  utils.py
tests/auth/: 3refresh_token_test.py  change_password_test.py  conftest.py  forgot_password_test.py  login_test.py  oauth_test.py  refresh_token_test.py  (+2 more)
(+63 files in other folders)
