[tool.poetry]
name = "social-network-fastapi"
version = "0.1.0"
description = "social-network"
authors = ["Bogdan <bogdanatrosenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["all"], version = "^0.111.1" }
setuptools = "^71.1.0"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
pydantic-settings = "^2.4.0"
psycopg = "^3.2.1"
psycopg-binary = "^3.2.1"
asyncpg = "^0.29.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-jose = "^3.3.0"
bcrypt = "4.0.1"
fastapi-mail = "^1.4.1"
requests = "^2.32.3"
authlib = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    ".", "friendly",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = "ignore::Warning"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"